--- a/Aquarium/res/layout/tank_layout.xml
+++ b/Aquarium/res/layout/tank_layout.xml
@@ -1,203 +1,171 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="25dp"
+    android:background="@drawable/aquariumlayout"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".ThematicLayout" >
+        android:layout_below="@+id/living_reef_img"
+        android:layout_marginLeft="180dp"
+        android:text="@string/living_reef"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
+    <ImageButton
+        android:id="@+id/shark_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="305dp"
+        android:contentDescription="@string/shark_tank"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-            <ImageView
-                android:id="@+id/living_reef_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/living_reef"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/shark_img"
+        android:layout_marginLeft="40dp"
+        android:text="@string/shark_tank"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/living_reef_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/living_reef"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+    <ImageButton
+        android:id="@+id/artifical_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="133dp"
+        android:layout_toRightOf="@+id/textView2"
+        android:contentDescription="@string/artificial_reef"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
+    <TextView
+        android:id="@+id/artificial_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/artifical_img"
+        android:layout_marginLeft="125dp"
+        android:text="@string/artificial_reef"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/artificial_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/artificial_reef"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+    <TextView
+        android:id="@+id/poison_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/artificial_txt"
+        android:layout_alignBottom="@+id/artificial_txt"
+        android:layout_marginLeft="310dp"
+        android:text="@string/poison_tank"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/artifical_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/artificial_reef"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
-        </LinearLayout>
+    <ImageButton
+        android:id="@+id/poison_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/poison_txt"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/textView1"
+        android:contentDescription="@string/poison_tank"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
+    <TextView
+        android:id="@+id/lobster_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/poison_txt"
+        android:layout_below="@+id/lobster_img"
+        android:text="@string/lobster_tank"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/shark_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/shark_tank"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
+    <TextView
+        android:id="@+id/cave_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cave_img"
+        android:layout_marginLeft="450dp"
+        android:text="@string/cave_tank"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/shark_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/shark_tank"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+    <TextView
+        android:id="@+id/school_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/school_img"
+        android:layout_marginLeft="320dp"
+        android:text="@string/school_tank"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
+    <ImageButton
+        android:id="@+id/cave_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/lobster_img"
+        android:layout_alignRight="@+id/cave_txt"
+        android:contentDescription="@string/cave_tank"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-            <TextView
-                android:id="@+id/poison_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/poison_tank"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+    <ImageButton
+        android:id="@+id/living_reef_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/school_txt"
+        android:layout_alignRight="@+id/artificial_txt"
+        android:contentDescription="@string/living_reef"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-            <ImageView
-                android:id="@+id/poison_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/poison_tank"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
-        </LinearLayout>
+    <ImageButton
+        android:id="@+id/lobster_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
+        android:layout_alignLeft="@+id/school_txt"
+        android:layout_marginLeft="18dp"
+        android:contentDescription="@string/lobster_tank"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
+    <ImageButton
+        android:id="@+id/school_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/lobster_img"
+        android:layout_below="@+id/lobster_txt"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="33dp"
+        android:contentDescription="@string/school_tank"
+        android:onClick="onClick"
+        android:src="@drawable/button" />
 
-            <ImageView
-                android:id="@+id/lobster_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/lobster_tank"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
+    <Button
+        android:id="@+id/back_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView1"
+        android:layout_marginBottom="87dp"
+        android:onClick="onClick"
+        android:text="@string/back"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/lobster_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/lobster_tank"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
-
-            <TextView
-                android:id="@+id/school_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/school_tank"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/school_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/school_tank"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
-
-            <ImageView
-                android:id="@+id/cave_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/cave_tank"
-                android:onClick="onClick"
-                android:src="@drawable/conch" />
-
-            <TextView
-                android:id="@+id/cave_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/cave_tank"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#FFFFFF" >
-
-            <Button
-                android:id="@+id/back_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/back"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:onClick="onClick" >
-            </Button>
-        </LinearLayout>
-    </LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
